--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -24,19 +24,18 @@
         "pageExitWarningMessage": "Do you really want to cancel your job application?"
     },
     "privacyPage": {
-        "readPrivacyMessage": "Before we can get started: During the application process, you need to enter some private information. Because of this, please read the Privacy Policy.",
+        "readPrivacyMessage": "Please read and accept the privacy policy to proceed further.",
         "openPrivacy": "Open Privacy Policy",
         "agreePrivacyMessage": "I have read and agree to the Privacy Policy.",
-        "privacyPolicy": "Privacy Policy",
-        "dummyText": "This is the text of the Privacy Policy"
+        "privacyPolicy": "Privacy Policy"
     },
     "applicantsPage": {
         "applications": "Applications",
         "finalized": "Finalized",
-        "finalizedByHrMessage": "{{finalizedCount}} applications has been finalized by HR staff to be sent to HR monitor.",
+        "finalizedByHrMessage": "{{finalizedCount}} application(s) has been finalized by fair team member and to be sent to the server.",
         "sendToServer": "Send To Server",
         "notFinished": "Not Finished",
-        "yetToRateMessage": "This list includes all the applications that have been submitted by the applicant but not been rated by HR staff.",
+        "yetToRateMessage": "This list includes all the submitted applications that are yet to be rated.",
         "noApplicantsMessage": "No application is submitted or finalized"
     },
     "applicantsUploadPage": {
@@ -56,20 +55,20 @@
     },
     "ratingPage": {
         "applicantRatingDescription": "Please provide your insights on the applicant by providing a rating between 1 (not good) and 5 (excellent).",
-        "finalizeConfirmationMessage": "Do you really want to finalize this form? It won't be possible to edit later.",
+        "finalizeConfirmationMessage": "Do you really want to finalize this application? It won't be possible to edit later.",
         "applicationFinalizedNotification": "Applicant information is finalized",
         "rhetoricScore": "Rhetoric",
         "motivationScore": "Motivation",
         "selfAssurance": "Self-Assurance",
         "personalImpression": "Personal Impression",
-        "finalizeApplicantMessage": "All changes are saved automatically. So, you can simply leave this form and continue editing it later. If you want to send the data to the server, you have to \"finalize\" this form. That means that it won't be possible to edit the content anymore.",
-        "fillRequiredFieldsToFinalizeMessage": "You can finalize this form as soon as you have filled all the required fields. By opening the right menu, you can see where you still need to fill the form.",
-        "addImpressionMessage": "Please write a few lines about your personal impression on the applicant. Also, if you want to add/mention anything else you can do it here."
+        "finalizeApplicantMessage": "All the changes made are saved automatically. You can edit the data until it is finalized. Click on \"finalize\" in order to send the application to the server.",
+        "fillRequiredFieldsToFinalizeMessage": "Fill all the fields, to enable finalize application option. Toggle right menu to see unfilled step(s).",
+        "addImpressionMessage": "Add your personal impression about the applicant or any other additional details in the below field."
     },
     "basicInfo": {
         "title": "Basic Information",
         "welcome": "Welcome!",
-        "stepDescription": "So that we can get to know you better, please provide your first and last name.",
+        "stepDescription": "To address, provide your first and last name.",
         "salutationTitle": "Title",
         "firstName": "First Name",
         "lastName": "Last Name",
@@ -78,8 +77,8 @@
     },
     "contactInfo": {
         "title": "Contact Information",
-        "greetingsMessage": "Nice to meet you, {{name}}!",
-        "stepDescription": "So that we can get in touch with you, please fill out the following contact information fields.",
+        "greetingsMessage": "Hi, {{name}}!",
+        "stepDescription": "To contact, provide your contact details below.",
         "phoneNumber": "Phone Number",
         "email": "Email",
         "linkedinAccount": "LinkedIn Account",
@@ -87,19 +86,19 @@
     },
     "profilePicture": {
         "title": "Picture",
-        "stepDescription": "Here you can add a picture of yourself by tapping on the image icon.",
-        "deleteTakeAnotherPictureMessage": "Good job! If you want to take another picture, just delete the actual picture and take another one."
+        "stepDescription": "Tap on the avatar, to add your profile picture.",
+        "deleteTakeAnotherPictureMessage": "Delete the existing picture, if you want to take an another one."
     },
     "documentsUpload": {
         "title": "Documents",
-        "stepDescription": "In this step, you can take photos of documents you would like to include in your application. For instance, you can take photos of your CV here. This step is optional: If you don't want to add anyting, you can just skip it.",
+        "stepDescription": "Tap on the plus icon, to attach additional documents like CV, Certificates. Or simply continue to proceed further.",
         "delete": "Delete",
         "deleteConfirmationMessage": "Do you really want to delete this image?",
         "imageDeleteSuccessMessage": "The image has been deleted successfully"
     },
     "workExperience":{
         "title": "Work Experience",
-        "stepDescription": "Here, you can add information about your work experience.",
+        "stepDescription": "Add information about your work experience(s).",
         "jobTitle": "Title",
         "company": "Company",
         "employmentType": "Employment Type",
@@ -119,7 +118,7 @@
     },
     "educationInfo": {
         "title": "Education Information",
-        "stepDescription": "Here, you can add information about your education. So: Which schools/universities have you visited?",
+        "stepDescription": "Add information about your educational background.",
         "degreeYearGradeMessage": "Degree: {{degree}} ({{graduationYear}}, {{grade}})",
         "schoolOrUniversity": "School/University",
         "subject": "Subject",
@@ -132,7 +131,7 @@
     },
     "industryAndPositionPreference": {
         "title": "Industries and Positions",
-        "stepDescription": "So that we can know which industries and positions you are intrested in, please choose from the following.",
+        "stepDescription": "Choose the relevant industries and positions you are interested.",
         "industry": "Industry",
         "position": "Position",
         "automotive": "Automotive",
@@ -149,16 +148,16 @@
     },
     "confirmationPage": {
         "done": "Done",
-        "stepDescription": "The application has been submitted. The following steps need to be performed by the HR staff (either now or later)."
+        "stepDescription": "The application has been submitted. The following steps need to be performed by the fair team member (either now or later)."
     },
     "submitData": {
         "title": "Submit",
-        "stepDescription": "That's it! You can now submit your application and hand the device back to our team.",
-        "fillMandatoryFieldsToSubmitMessage": "You can submit the form as soon as you have filled out all required fields. By opening the right menu, you can see where you still need to enter some data."
+        "stepDescription": "You are done! You can submit your application now and hand the device back to our team.",
+        "fillMandatoryFieldsToSubmitMessage": "You can submit the application, once all the required fields are filled. Toggle the right menu to see the unfilled step(s)"
     },
     "keyCompetencies": {
         "title": "Key Competencies",
-        "stepDescription": "Now, please select and rate your key competencies. We expect you to add at least one entry to \"Languages\" in order to complete this step.",
+        "stepDescription": "Select and rate your key competencies. Add at least one entry in \"Languages\" field to complete this step.",
         "languages": "Languages",
         "businessSkills": "Business Skills",
         "professionalSoftware": "Professional Software",
@@ -166,12 +165,12 @@
         "programmingLanguagesAndFrameworks": "Programming Languages and Frameworks",
         "all": "All",
         "selected": "Selected",
-        "noMatchFoundMessage": "No items match your selection",
-        "notFoundAddMessage": "Not found what you were looking for? You can also add your search term (\"{{ searchedTerm }}\") to the list.",
+        "noMatchFoundMessage": "No item matched your search",
+        "notFoundAddMessage": "Not found what you are looking for? You can add the search term (\"{{ searchedTerm }}\") to the list.",
         "addToList": "Add to list",    
         "rating": "Rating: ",
-        "ratingMessage": "Please rate your skills from 1 (not good) to 5 (excellent).",   
-        "searchItemErrorMessage": "\"{{searchedTerm}}\" cannot be added because it is already part of the list or it is not a valid name.",
+        "ratingMessage": "Rate your skills from 1 (not good) to 5 (excellent).",   
+        "searchItemErrorMessage": "\"{{searchedTerm}}\" cannot be added as it is not an unique or a valid name.",
         "searchAlertMessage": "Do you really want to add \"{{searchedTerm}}\" to the list?",
         "addedToListMessage": "\"{{searchedTerm}}\" has been added to the list.",
         "languageItems": [
@@ -211,16 +210,16 @@
 
     "additionalInfo": {
         "title": "Additional Information",
-        "stepDescription": "Here you can add additional information that you want to include in the application."
+        "stepDescription": "Add additional information if any, to the application."
     },
     "sideMenu": {
         "progress": "Progress",
-        "description": "If you want to go to a previous step, just click on the element in the list!"
+        "description": "Click on the repective step, if you want to navigate to it."
     },
 
     "skipStep":{
         "skip": "Skip",
-        "skipMessage": "Do you really want to skip this step? Please only do this if the data asked for in this step are part of the documents you took a photo of.",
+        "skipMessage": "Do you want to skip this step? Do it only if the required data is already provided in the attached documents.",
         "skipStep": "Skip this Step"
     },
 
