Text and translation proved and corrected

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -24,30 +24,29 @@
         "pageExitWarningMessage": "Willst Du Deine Bewerbung wirklich abbrechen?"
     },
     "privacyPage": {
-        "readPrivacyMessage": "Bevor wir loslegen: Während Deiner Bewerbung werden einige private Informationen benötigt. Lese deswegen bitte die Datenschutzerklärung durch.",
+        "readPrivacyMessage": "Bitte lese und akzeptiere die Datenschutzerklärung.",
         "openPrivacy": "Datenschutzerklärung öffnen",
         "agreePrivacyMessage": "Ich habe die Datenschutzerklärung gelesen und akzeptiere sie.",
-        "privacyPolicy": "Datenschutzerklärung",
-        "dummyText": "Hier steht die Datenschutzerklärung"
+        "privacyPolicy": "Datenschutzerklärung"
     },
     "applicantsPage": {
         "applications": "Bewerbungen",
         "finalized": "Abgeschlossen",
-        "finalizedByHrMessage": "{{finalizedCount}} Bewerbung(en) wurden vom HR-Personal abgeschlossen und können an den Server gesendet werden.",
+        "finalizedByHrMessage": "{{finalizedCount}} Bewerbung(en) sind abgeschlossen und können an den Server gesendet werden.",
         "sendToServer": "An den Server senden",
         "notFinished": "Offene Bewerbungen",
-        "yetToRateMessage": "Diese Liste enthält alle Bewerbungen, die vom Bewerber abgesendet, aber noch nicht durch das HR-Personal bewertet wurden.",
-        "noApplicantsMessage": "Es gibt derzeit keine Bewerbungen, die noch bearbeitet oder zum Server geladen werden müssen."
+        "yetToRateMessage": "Diese Liste enthält alle eingereichten Bewerbungen, die noch nicht bewertet wurden.",
+        "noApplicantsMessage": "Es gibt derzeit keine Bewerbungen, die noch bearbeitet oder an den Server gesendet werden müssen."
     },
     "applicantsUploadPage": {
         "upload": "Hochladen",
         "uploadingProgressMessage": "Bewerbung(en) werden hochgeladen {{uploadSize}}/{{totalSize}}",
-        "allApplicantsSavedSuccessMessage":"Alle Bewerbung (en) erfolgreich gesendet",
-        "allApplicantsFailedMessage": "Aufgrund einiger Fehler wurden keine Bewerbungen gesendet. Bitte versuchen Sie es später noch einmal.",
+        "allApplicantsSavedSuccessMessage":"Bewerbung(en) erfolgreich gesendet",
+        "allApplicantsFailedMessage": "Aufgrund einiger Fehler wurden keine Bewerbungen gesendet. Bitte versuche es später noch einmal.",
         "partialySentAndFailedMessage": "{{successCount}} Anwendung(en) erfolgreich gesendet und {{failedCount}} Anwendung(en) fehlgeschlagen.",
         "allRequestCancelledMessage": "Keine Bewerbungen gesendet, da der Vorgang abgebrochen wurde.",
         "nSucceededRestCancelledMessage": "{{successCount}} Bewerbung(en) erfolgreich gesendet. Die restliche(n) Bewerbung(en) wurden nicht an den Server gesendet, da der Vorgang abgebrochen wurde.",
-        "loginToProcessMessage": "Bitte melden Sie sich an, um fortzufahren."
+        "loginToProcessMessage": "Bitte melde dich an, um fortzufahren."
 
     },
     "hrSideMenu": {
@@ -56,21 +55,21 @@
         "progress": "Fortschritt"
     },
     "ratingPage": {
-        "applicantRatingDescription": "Bitte gib' uns einen Einblick, wie gut sich der Bewerber präsentiert hat. Nutze hierfür eine Skala von 1 (nicht gut) bis 5 (exzellent).",
+        "applicantRatingDescription": "Bitte gib uns einen Einblick, wie gut sich der Bewerber präsentiert hat. Nutze hierfür eine Skala von 1 (nicht gut) bis 5 (exzellent).",
         "finalizeConfirmationMessage": "Soll die Bewerbung abgeschlossen werden? Eine Bearbeitung zu einem späteren Zeitpunkt ist nicht mehr möglich.",
         "applicationFinalizedNotification": "Die Informationen zur Bewerbung sind abgeschlossen.",
         "rhetoricScore": "Rhetorik",
         "motivationScore": "Motivation",
         "selfAssurance": "Selbstsicherheit",
         "personalImpression": "Persönlicher Eindruck",
-        "finalizeApplicantMessage": "Alle Änderungen werden automatisch gespeichert. Du kannst dieses Formular also einfach verlassen und später an dieser Stelle weitermachen. Wenn Du die Daten an den Server senden möchtest, musst Du das Formular \"abschließen\". Das bedeutet, dass es später nicht mehr möglich sein wird, Änderungen durchzuführen.",
-        "fillRequiredFieldsToFinalizeMessage": "Du kannst dieses Formular abschließen, sobald Du alle erforderlichen Felder ausgefüllt hast. Wenn Du das rechte Menü öffnest, kannst Du sehen, wo noch Angaben fehlen.",
-        "addImpressionMessage": "Bitte schreibe ein paar Zeilen über Deinen persönlichen Eindruck zum Bewerber. Wenn Du noch etwas hinzufügen oder ergänzen möchtest, kannst Du dies an dieser Stelle erledigen."
+        "finalizeApplicantMessage": "Alle Änderungen werden automatisch gespeichert. Du kannst die Informationen solange ändern, bis die Bewerbung abgeschlossen ist. Klicke auf \"abschließen\", um die Bewerbung an den Server zu senden.",
+        "fillRequiredFieldsToFinalizeMessage": "Fülle alle erforderlichen Felder aus, um die Bewerbung abzuschließen. Wenn Du das rechte Menü öffnest, kannst Du sehen, welche Angaben fehlen.",
+        "addImpressionMessage": "Gib deinen persönlichen Eindruck zum Bewerber und optional weitere Informationen hier an."
     },
     "basicInfo": {
         "title": "Basis-Informationen",
         "welcome": "Willkommen!",
-        "stepDescription": "Damit wir Dich besser kennenlernen können, gib' bitte Deinen Vor- und Nachnamen an.",
+        "stepDescription": "Bitte gib Deinen Vor- und Nachnamen an.",
         "salutationTitle": "Anrede",
         "firstName": "Vorname",
         "lastName": "Nachname",
@@ -79,7 +78,7 @@
     },
     "contactInfo": {
         "title": "Kontakt-Informationen",
-        "greetingsMessage": "Schön Dich kennenzulernen, {{name}}!",
+        "greetingsMessage": "Hallo {{name}}!",
         "stepDescription": "Bitte fülle die weiteren Kontakt-Informationen aus.",
         "phoneNumber": "Telefonnummer",
         "email": "Email",
@@ -88,19 +87,19 @@
     },
     "profilePicture": {
         "title": "Profilbild",
-        "stepDescription": "Hier kannst Du ein Profilbild von Dir hinzufügen. Klicke hierfür auf das Bild-Symbol.",
-        "deleteTakeAnotherPictureMessage": "Gut gemacht! Wenn Du ein anderes Bild aufnehmen möchtest, lösche das Bild über den Papierkorb-Button und nehme ein Neues auf."
+        "stepDescription": "Klicke auf das Bild-Symbol, wenn Du ein Profilbild von dir aufnehmen möchtest.",
+        "deleteTakeAnotherPictureMessage": "Wenn Du ein neues Bild aufnehmen möchtest, lösche das aktuelle Bild."
     },
     "documentsUpload": {
         "title": "Dokumente",
-        "stepDescription": "In diesem Schritt kannst Du Fotos von Dokumenten aufnehmen, die Du Deiner Bewerbung gerne hinzufügen möchtest. Zum Beispiel kannst Du hier ein Foto von Deinem Lebenslauf machen. Wenn Du keine Dokumente zum Hinzufügen hast, kannst Du diesen Schritt auch überspringen.",
+        "stepDescription": "Über das Plus-Icon kannst Du Bilder von Dokumenten wie z.B. deinem Lebenslauf aufnehmen.",
         "delete": "Löschen",
         "deleteConfirmationMessage": "Möchtest Du dieses Foto wirklich löschen?",
         "imageDeleteSuccessMessage": "Das Foto wurde erfolgreich gelöscht."
     },
     "workExperience":{
-        "title": "Arbeitserfahrung",
-        "stepDescription": "Hier kannst Du Informationen zu Deiner Arbeitserfahrung angeben.",
+        "title": "Berufserfahrung",
+        "stepDescription": "Hier kannst Du Angaben zu Deiner Berufserfahrung machen.",
         "jobTitle": "Titel",
         "company": "Unternehmen",
         "employmentType": "Beschäftigungsverhältnis",
@@ -120,7 +119,7 @@
     },
     "educationInfo": {
         "title": "Bildung",
-        "stepDescription": "Hier kannst Du Informationen zu Deinem Bildungsweg angeben. Also: Welche Schulen oder Universitäten hast Du besucht?",
+        "stepDescription": "Hier kannst Du deinen schulischen Werdegang angeben.",
         "degreeYearGradeMessage": "Abschluss: {{degree}} ({{graduationYear}}, {{grade}})",
         "schoolOrUniversity": "Schule/Universität",
         "subject": "Fach",
@@ -133,7 +132,7 @@
     },
     "industryAndPositionPreference": {
         "title": "Branchen und Stellen",
-        "stepDescription": "Bitte wähle aus den folgenden Optionen, welche Interessen Du in den Bereichen Branchen und Stellen hast.",
+        "stepDescription": "Bitte wähle Branchen und Stellen, welche dich interessieren.",
         "industry": "Branchen",
         "position": "Stellen",
         "automotive": "Automobil",
@@ -144,22 +143,22 @@
         "businessConsultant": "Consultant/Business Consultant",
         "itConsultantManagement": "IT-Consultant - Informationsmanagement",
         "itConsultantJava": "IT-Consultant - Java/JEE",
-        "itConsultantDataScience": "IT-Consultant - Data Science / Artificial Intelligence",
+        "itConsultantDataScience": "IT-Consultant - Data Science/Artificial Intelligence",
         "consultantSAP": "Consultant SAP",
         "internship": "Praktikant/Werkstudent"
     },
     "confirmationPage": {
         "done": "Fertig",
-        "stepDescription": "Der Antrag wurde eingereicht. Die folgenden Schritte müssen von den Mitarbeitern der Personalabteilung durchgeführt werden (entweder jetzt oder später)."
+        "stepDescription": "Der Antrag wurde eingereicht. Die folgenden Schritte müssen von den Mitarbeitern des Messeteams durchgeführt werden (entweder jetzt oder später)."
     },
     "submitData": {
         "title": "Absenden",
         "stepDescription": "Geschafft! Du kannst Deine Bewerbung jetzt absenden und das Gerät an unser Team zurückgeben.",
-        "fillMandatoryFieldsToSubmitMessage": "Du kannst das Formular absenden, sobald Du alle Pflichtfelder ausgefüllt hast. Wenn Du das rechte Menü öffnest, kannst Du sehen, wo noch Angaben fehlen."
+        "fillMandatoryFieldsToSubmitMessage": "Du kannst deine Bewerbung erst absenden, wenn Du alle Pflichtfelder ausgefüllt hast. Im rechten Menü kannst Du sehen, welche Angaben noch fehlen."
     },
     "keyCompetencies": {
         "title": "Kompetenzen",
-        "stepDescription": "Bitte wähle und bewerte nun Deine Kompetenzen. Wir erwarten von Dir, dass Du mindestens einen Eintrag unter \"Sprachen\" hinzufügst, um diesen Schritt abzuschließen.",
+        "stepDescription": "Bitte wähle und bewerte nun Deine Kompetenzen. Füge mindestens einen Eintrag unter \"Sprachen\" hinzu, um diesen Schritt abzuschließen.",
         "languages": "Sprachen",
         "businessSkills": "Unternehmerische Fähigkeiten",
         "professionalSoftware": "Software-Kenntnisse",
@@ -168,10 +167,10 @@
         "all": "Alle",
         "selected": "Ausgewählt",
         "noMatchFoundMessage": "Es wurde kein passender Eintrag gefunden",
-        "notFoundAddMessage": "Nicht gefunden, wonach Du gesucht hast? Du kannst auch Deinen Suchbegriff (\"{{ searchedTerm }}\") in die Liste aufnehmen.",
+        "notFoundAddMessage": "Nicht gefunden, wonach Du gesucht hast? Du kannst deinen Suchbegriff (\"{{ searchedTerm }}\") in die Liste aufnehmen.",
         "addToList": "Zur Liste hinzufügen",
         "rating": "Bewertung: ",
-        "ratingMessage": "Bitte bewerte Deine Fähigkeiten von 1 (nicht gut) bis 5 (exzellent).",
+        "ratingMessage": "Bewerte Deine Fähigkeiten von 1 (nicht gut) bis 5 (exzellent).",
         "searchItemErrorMessage": "\"{{searchedTerm}}\" kann nicht hinzugefügt werden, weil es entweder bereits in der Liste vorhanden oder kein gültiger Name ist.",
         "searchAlertMessage": "Willst Du wirklich \"{{searchedTerm}}\" zur Liste hinzufügen?",
         "addedToListMessage":"\"{{searchedTerm}}\" wurde der Liste hinzugefügt.",
@@ -211,25 +210,25 @@
     },
     "additionalInfo": {
         "title": "Zusätzliche Information",
-        "stepDescription": "Hier kannst Du zusätzliche Informationen angeben"
+        "stepDescription": "Hier kannst Du zusätzliche Informationen angeben."
     },
     "sideMenu": {
         "progress": "Fortschritt",
-        "description": "Wenn Du zu einem vorherigen Schritt wechseln willst, dann klicke einfach auf den entsprechenden Eintrag in der Liste!"
+        "description": "Klicke auf den entsprechenden Schritt in der Liste, um ihn zu bearbeiten!"
     },
 
     "skipStep":{
         "skip": "Überspringen",
-        "skipMessage": "Möchtest Du diesen Schritt wirklich überspringen? Bitte überspringe diesen Schritt nur dann, wenn die hier benötigten Informationen Teil der Dokumente sind, welche Du als Bilder hochgeladen hast.",
+        "skipMessage": "Möchtest Du diesen Schritt wirklich überspringen? Bitte überspringe diesen Schritt nur dann, wenn die benötigten Informationen Teil der Dokumente sind, die Du hinzugefügt hast.",
         "skipStep": "Schritt überspringen"
     },
 
     "loginPage":{
         "title": "Anmeldung",
-        "stepDescription": "Geben Sie die Administratoranmeldeinformationen wie im HR-Monitor ein, um das Gerät zu authentifizieren",
+        "stepDescription": "Geben Sie zur Authentifizierung die Administratoranmeldeinformationen wie im HR-Monitor ein.",
         "userName": "Nutzername",
         "password": "Passwort",
-        "credentialsDoesnotMatch": "Benutzername / Passwort stimmt nicht überein. Bitte geben Sie einen gültigen Berechtigungsnachweis ein.",
+        "credentialsDoesnotMatch": "Benutzername und Passwort stimmen nicht überein. Bitte geben Sie einen gültigen Berechtigungsnachweis ein.",
         "generalErrorMessage": "Aufgrund eines Fehlers kann die Anforderung nicht verarbeitet werden. Bitte versuchen Sie es später noch einmal."
     },
     "policyDetailsPage":{ 
