--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -220,7 +220,7 @@
 
     "skipStep":{
         "skip": "Skip",
-        "skipMessage": "If you skip this page, no information will be transferred. If possible, please provide all information at your hand - uploading a document is one way to do so.",
+        "skipMessage": "If you skip this step, no information will be transferred. If possible, please provide all information at your hand - uploading a document is one way to do so.",
         "skipStep": "Skip this Step"
     },
 
