--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -24,7 +24,7 @@
         "pageExitWarningMessage": "Do you really want to cancel your job application?"
     },
     "privacyPage": {
-        "readPrivacyMessage": "Please read and accept the privacy policy.",
+        "readPrivacyMessage": "Please read and accept the privacy policy to start the application.",
         "openPrivacy": "Open Privacy Policy",
         "agreePrivacyMessage": "I have read and agree to the Privacy Policy.",
         "privacyPolicy": "Privacy Policy"
@@ -32,7 +32,7 @@
     "applicantsPage": {
         "applications": "Applications",
         "finalized": "Finalized",
-        "finalizedByHrMessage": "{{finalizedCount}} application(s) are finalized and can be send to the server.",
+        "finalizedByHrMessage": "{{finalizedCount}} application(s) has been finalized and can be sent to the server.",
         "sendToServer": "Send To Server",
         "notFinished": "Not Finished",
         "yetToRateMessage": "This list includes all the submitted applications that are yet to be rated.",
@@ -44,7 +44,7 @@
         "allApplicantsSavedSuccessMessage":"All application(s) sent successfully",
         "allApplicantsFailedMessage": "Due to some error(s), none of the application(s) were sent. Please try again later",
         "partialySentAndFailedMessage": "{{succeededCount}} application(s) sent successfully and {{failedCount}} application(s) failed.",
-        "allRequestCancelledMessage": "None of the application(s) were sent, as it was cancelled.",
+        "allRequestCancelledMessage": "None of the application(s) were sent, as it was canceled.",
         "nSucceededRestCancelledMessage": "{{succeededCount}} application(s) sent successfully. Rest of the application(s) were not sent to the server, as it was cancelled.",
         "loginToProcessMessage": "Please login, to proceed further."
     },
@@ -86,7 +86,7 @@
     },
     "profilePicture": {
         "title": "Picture",
-        "stepDescription": "Tap on the avatar, to take a profile picture.",
+        "stepDescription": "Tap on the avatar, to take your profile picture.",
         "deleteTakeAnotherPictureMessage": "If you want to take another picture, delete the existing one."
     },
     "documentsUpload": {
@@ -210,16 +210,16 @@
 
     "additionalInfo": {
         "title": "Additional Information",
-        "stepDescription": "You can provide additional information here."
+        "stepDescription": "Provide additional information if any, to submit with the aplication."
     },
     "sideMenu": {
         "progress": "Progress",
-        "description": "Click on the step, you want to edit."
+        "description": "Click on the repective step to navigate into it."
     },
 
     "skipStep":{
         "skip": "Skip",
-        "skipMessage": "Do you want to skip this step? Please skip only steps, if the required information is already provided in the attached documents.",
+        "skipMessage": "Do you want to skip this step? Do it only if the required information is already provided in the attached documents.",
         "skipStep": "Skip this Step"
     },
 
@@ -229,7 +229,7 @@
         "userName": "Username",
         "password": "Password",
         "credentialsDoesnotMatch": "Username / Password does not match. Please enter a valid credentials.",
-        "generalErrorMessage": "Due to some error, request cannot be processed. Please try again later."
+        "generalErrorMessage": "Due to some error, the request cannot be processed. Please try again later."
     },
     "policyDetailsPage": {
         "point1" : "<div class=\"main-heading\">1.Data protection at a glance</div><div class=\"sub-heading\">General notes</div><div class=\"topic-content\">The following notes provide a simple overview of what happens to your personal data when our application uses digitact.According to Art.4(1)DSGVO, personal data are all data with which you can be personally identified.Detailed information on the topic of data protection can be found in our data protection declaration listed under this text.</div><div class=\"topic-content\">The operators of this application take the protection of your personal data very seriously.We treat your personal data confidentially and in accordance with the statutory data protection regulations and this data protection declaration.</div> <div class=\"sub-heading\">Data collection in our application</div><div class=\"sub-topic\">Who is responsible for data acquisition in the application?</div><div class=\"topic-content\">Data processing of the application by <br><br>Consileon Business Consultancy GmbH,<br>Maximilianstr.5,<br>76133 Karlsruhe,Germany.</div> <div class=\"sub-topic\">How do we collect your data?</div><div class=\"topic-content\">One way we collect your data is by letting us know what you have entered into the application.<br>No other data is collected.</div> <div class=\"sub-topic\">What do we use your data for?</div><div class=\"topic-content\">The data is collected for your contact and application process.</div> <div class=\"sub-topic\">What rights do you have regarding your data?</div><div class=\"topic-content\">In accordance with Chapter III of the DSGVO,you have the right to receive information free of charge at any time about the origin,recipient and purpose of your stored personal data.You also have the right to demand the correction,blocking or deletion of this data.You can contact us at any time at the address given in the imprint for this purpose and for further questions on the subject of data protection.Furthermore,you have a right of appeal to the responsible supervisory authority.</div>",
